[Web] Improve Combat information performance
[Web] Improve Combat information performance

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
@@ -25,5 +25,8 @@
   "ToTarget": "ToTarget",
   "CritHealing": "Crit healing",
   "AllToOverHeal": "All to over heal",
-  "Crushing": "Crushing"
+  "Crushing": "Crushing",
+  "Skill": "Skill",
+  "Target": "Target",
+  "WhoDamage": "Who damage"
 }
