--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
@@ -26,7 +26,7 @@
   "CritHealing": "Crit healing",
   "AllToOverHeal": "All to over heal",
   "Crushing": "Crushing",
-  "Skill": "Skill",
+  "Spell": "Spell",
   "Target": "Target",
   "WhoDamage": "Who damage"
 }
