--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
@@ -26,7 +26,7 @@
   "CritHealing": "Крит. исцеление",
   "AllToOverHeal": "Все исцеление в оверхил",
   "Crushing": "Сокр. урон",
-  "Skill": "Заклинание",
+  "Spell": "Заклинание",
   "Target": "Цель",
   "WhoDamage": "Кто ударил"
 }
