Fix Web Combat details cache
Fixed problem when data did not saved in cache (2 mins) and every time when player surfing between pages (with Details) it is trigger a new request, with same request data

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
@@ -28,5 +28,9 @@
   "Crushing": "Crushing",
   "Spell": "Spell",
   "Target": "Target",
-  "WhoDamage": "Who damage"
+  "WhoDamage": "Who damage",
+  "First": "First",
+  "Previous": "Previous",
+  "Next": "Next",
+  "Last": "Last"
 }
