--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
@@ -28,5 +28,9 @@
   "Crushing": "Сокр. урон",
   "Spell": "Заклинание",
   "Target": "Цель",
-  "WhoDamage": "Кто ударил"
+  "WhoDamage": "Кто ударил",
+  "First": "Первая",
+  "Previous": "Предыдущая",
+  "Next": "Следующая",
+  "Last": "Последняя"
 }
