--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
@@ -32,5 +32,7 @@
   "First": "First",
   "Previous": "Previous",
   "Next": "Next",
-  "Last": "Last"
+  "Last": "Last",
+  "All": "All",
+  "Creator": "Creator"
 }
