--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
@@ -32,5 +32,7 @@
   "First": "Первая",
   "Previous": "Предыдущая",
   "Next": "Следующая",
-  "Last": "Последняя"
+  "Last": "Последняя",
+  "All": "Все",
+  "Creator": "Инициатор"
 }
