Update Desktop app
Updated Desktop to till new Entity versions + fixed some issues with View and ViewModels

--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -144,6 +144,9 @@
   <data name="LoadingFailed" xml:space="preserve">
     <value>Loading failed</value>
   </data>
+  <data name="ShowLogs" xml:space="preserve">
+    <value>Show logs</value>
+  </data>
   <data name="PreparePets" xml:space="preserve">
     <value>Prepare pets</value>
   </data>
