--- a/src/CombatAnalysis.App/Localizations/Resources/HealDoneDetails/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/HealDoneDetails/Resource.resx
@@ -132,11 +132,17 @@
   <data name="DamageAbsorbed" xml:space="preserve">
     <value>Damage absorb.</value>
   </data>
+  <data name="First" xml:space="preserve">
+    <value>First</value>
+  </data>
   <data name="Healing" xml:space="preserve">
     <value>Healing</value>
   </data>
   <data name="HealingPerSec" xml:space="preserve">
     <value>Healing per sec.</value>
+  </data>
+  <data name="Last" xml:space="preserve">
+    <value>Last</value>
   </data>
   <data name="MaxValue" xml:space="preserve">
     <value>Max value</value>
@@ -147,11 +153,17 @@
   <data name="MoreDetails" xml:space="preserve">
     <value>More details</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Next</value>
+  </data>
   <data name="OverHealing" xml:space="preserve">
     <value>Over healing</value>
   </data>
   <data name="Player" xml:space="preserve">
     <value>Player</value>
+  </data>
+  <data name="Prev" xml:space="preserve">
+    <value>Prev</value>
   </data>
   <data name="ShowCrit" xml:space="preserve">
     <value>Show crit</value>
