--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/detailsSpecificalCombat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/detailsSpecificalCombat.json
@@ -8,5 +8,7 @@
   "SearchPlayer": "Search player",
   "Clean": "Clean",
   "TypeUsername": "Type player",
-  "Search": "Search"
+  "Search": "Search",
+  "Dashboard": "Dashboard",
+  "Details": "Details"
 }
