--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
@@ -17,5 +17,16 @@
   "NotReady": "Не готово",
   "Win": "Победа",
   "Lose": "Поражение",
-  "NeedWait": "Необходимо дождать пока бой будет готов к осмотру"
+  "NeedWait": "Необходимо дождать пока бой будет готов к осмотру",
+  "All": "Все",
+  "Filters": "Фильтры",
+  "Include": "Включая",
+  "Exclude": "Исключая",
+  "Creator": "Инициатор",
+  "Times": "Время",
+  "Apply": "Применить",
+  "When": "Когда",
+  "FiltersReset": "Сброс фильтров",
+  "TimesReset": "Сброс времени",
+  "SelectCombat": "Выбрать бой"
 }
