--- a/src/CombatAnalysis.App/Localizations/Resources/DamageTakenDetails/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DamageTakenDetails/Resource.ru.resx
@@ -150,8 +150,14 @@
   <data name="Dodge" xml:space="preserve">
     <value>Уклонение</value>
   </data>
-  <data name="EnemyOrPerDamage" xml:space="preserve">
-    <value>Противник/Период. урон</value>
+  <data name="Enemy" xml:space="preserve">
+    <value>Противник</value>
+  </data>
+  <data name="First" xml:space="preserve">
+    <value>Первая</value>
+  </data>
+  <data name="Last" xml:space="preserve">
+    <value>Последняя</value>
   </data>
   <data name="MaxValue" xml:space="preserve">
     <value>Макс. значение</value>
@@ -168,6 +174,9 @@
   <data name="MoreDetails" xml:space="preserve">
     <value>Подробнее</value>
   </data>
+  <data name="Next" xml:space="preserve">
+    <value>Сл.</value>
+  </data>
   <data name="Parry" xml:space="preserve">
     <value>Парирование</value>
   </data>
@@ -176,6 +185,9 @@
   </data>
   <data name="Player" xml:space="preserve">
     <value>Игрок</value>
+  </data>
+  <data name="Prev" xml:space="preserve">
+    <value>Пред.</value>
   </data>
   <data name="RealDamageDetails" xml:space="preserve">
     <value>Реальный урон: </value>
