Add hide CombatDetails columns
Now users can hide some details that not need right now (average value, min, max, etc).

Fixed some Desktop app issues

--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -213,7 +213,7 @@
   <data name="UploadFile" xml:space="preserve">
     <value>Upload file with combat data</value>
   </data>
-  <data name="WithoutUser" xml:space="preserve">
-    <value>Without user data</value>
+  <data name="Anonymous" xml:space="preserve">
+    <value>Anonymous</value>
   </data>
 </root>
