--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/helpers/combatDetailsHelper.json
@@ -1,15 +1,14 @@
 {
   "Total": "Total",
-  "AverageValue": "Average value",
-  "DamagePerSec": "Damage per sec",
-  "CountOfSkills": "Count of skills",
+  "Average": "Average",
+  "DPS": "DPS",
+  "Count": "Count",
   "Crit": "Crit",
-  "MaxValue": "Max value",
-  "MinValue": "Min value",
-  "HealingPerSec": "Healing per sec",
-  "DamageTakenPerSec": "Total taken per sec",
-  "ResourcesRecoveryPerSec": "Resources recovery per sec",
-  "CritDamage": "Crit damage",
+  "Max": "Max",
+  "Min": "Min",
+  "HPS": "HPS",
+  "DTPS": "DTPS",
+  "RRPS": "RRPS",
   "Dodge": "Dodge",
   "Miss": "Miss",
   "Parry": "Parry",
@@ -19,7 +18,6 @@
   "Value": "Value",
   "FromWho": "FromWho",
   "ToTarget": "ToTarget",
-  "CritHealing": "Crit healing",
   "AllToOverHeal": "All to over heal",
   "Crushing": "Crushing",
   "Spell": "Spell",
@@ -31,5 +29,6 @@
   "Last": "Last",
   "All": "All",
   "Creator": "Creator",
-  "FiltersReset": "Filters reset"
+  "FiltersReset": "Filters reset",
+  "Hide": "Hide"
 }
