--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/helpers/combatDetailsHelper.json
@@ -1,15 +1,14 @@
 {
   "Total": "Всего",
-  "AverageValue": "Ср. значение",
-  "DamagePerSec": "Урон в сек.",
-  "CountOfSkills": "Применено закл.",
+  "Average": "Среднее",
+  "DPS": "УВС",
+  "Count": "Кол-во",
   "Crit": "Крит",
-  "MaxValue": "Макс. значение",
-  "MinValue": "Мин. значение",
-  "HealingPerSec": "Исцеление в сек.",
-  "DamageTakenPerSec": "Получено урона в сек.",
-  "ResourcesRecoveryPerSec": "Восст. ресурсов в сек.",
-  "CritDamage": "Крит. урон",
+  "Max": "Макс",
+  "Min": "Мин",
+  "HPS": "ИВС",
+  "DTPS": "ПУВС",
+  "RRPS": "ВРВС",
   "Dodge": "Уклонение",
   "Miss": "Промах",
   "Parry": "Паррирование",
@@ -19,7 +18,6 @@
   "Value": "Значение",
   "FromWho": "От кого",
   "ToTarget": "К цели",
-  "CritHealing": "Крит. исцеление",
   "AllToOverHeal": "Все исцеление в оверхил",
   "Crushing": "Сокр. урон",
   "Spell": "Заклинание",
@@ -31,5 +29,6 @@
   "Last": "Последняя",
   "All": "Все",
   "Creator": "Инициатор",
-  "FiltersReset": "Сброс фильтров"
+  "FiltersReset": "Сброс фильтров",
+  "Hide": "Скрыть"
 }
