--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -153,11 +153,11 @@
   <data name="Private" xml:space="preserve">
     <value>Private</value>
   </data>
-  <data name="PrivateLogs" xml:space="preserve">
-    <value>Private logs</value>
+  <data name="PersonalLogs" xml:space="preserve">
+    <value>Personal logs</value>
   </data>
-  <data name="PrivateLogsLoginRequired" xml:space="preserve">
-    <value>For watching a 'Private logs' you need to login</value>
+  <data name="PersonalLogsLoginRequired" xml:space="preserve">
+    <value>For watching a 'Personal logs' you should be Login</value>
   </data>
   <data name="Processing" xml:space="preserve">
     <value>Processing...</value>
@@ -204,8 +204,8 @@
   <data name="TypeOfLogs" xml:space="preserve">
     <value>Type of logs</value>
   </data>
-  <data name="TypeOfLogsLoginRequired" xml:space="preserve">
-    <value>To select a type of logs you need to login</value>
+  <data name="ToUploadShouldBeLogin" xml:space="preserve">
+    <value>To Upload logs you should be Login</value>
   </data>
   <data name="Upload" xml:space="preserve">
     <value>Upload</value>
