--- a/src/CombatAnalysis.App/Localizations/Resources/DamageTakenDetails/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DamageTakenDetails/Resource.resx
@@ -123,8 +123,8 @@
   <data name="AbsorptionDetails" xml:space="preserve">
     <value>Absorptioned: </value>
   </data>
-  <data name="AverageValue" xml:space="preserve">
-    <value>Average value</value>
+  <data name="Average" xml:space="preserve">
+    <value>Average</value>
   </data>
   <data name="BlockDetails" xml:space="preserve">
     <value>Blocked: </value>
@@ -132,11 +132,11 @@
   <data name="Common" xml:space="preserve">
     <value>Common</value>
   </data>
-  <data name="CountOfSkills" xml:space="preserve">
-    <value>Count of skills</value>
+  <data name="Count" xml:space="preserve">
+    <value>Count</value>
   </data>
-  <data name="CrushingDamage" xml:space="preserve">
-    <value>Crushing damage</value>
+  <data name="Crushing" xml:space="preserve">
+    <value>Crushing</value>
   </data>
   <data name="DamageTaken" xml:space="preserve">
     <value>Damage taken</value>
@@ -144,8 +144,8 @@
   <data name="DamageTakenA" xml:space="preserve">
     <value>Damage tak. + A.</value>
   </data>
-  <data name="DamageTakenPerSec" xml:space="preserve">
-    <value>Damage taken per sec.</value>
+  <data name="DTPS" xml:space="preserve">
+    <value>DTPS</value>
   </data>
   <data name="Dodge" xml:space="preserve">
     <value>Dodge</value>
@@ -159,11 +159,11 @@
   <data name="Last" xml:space="preserve">
     <value>Last</value>
   </data>
-  <data name="MaxValue" xml:space="preserve">
-    <value>Max. value</value>
+  <data name="Max" xml:space="preserve">
+    <value>Max</value>
   </data>
-  <data name="MinValue" xml:space="preserve">
-    <value>Min. value</value>
+  <data name="Min" xml:space="preserve">
+    <value>Min</value>
   </data>
   <data name="Miss" xml:space="preserve">
     <value>Miss</value>
@@ -190,43 +190,16 @@
     <value>Prev</value>
   </data>
   <data name="RealDamageDetails" xml:space="preserve">
-    <value>Real damage: </value>
+    <value>Real damage:</value>
   </data>
   <data name="Resist" xml:space="preserve">
     <value>Resist</value>
   </data>
-  <data name="ResistDetails" xml:space="preserve">
-    <value>Resisted: </value>
+  <data name="Filters" xml:space="preserve">
+    <value>Filters</value>
   </data>
-  <data name="ShowAbsorption" xml:space="preserve">
-    <value>Show absorption</value>
-  </data>
-  <data name="ShowCrushingDamage" xml:space="preserve">
-    <value>Show crush. damage</value>
-  </data>
-  <data name="ShowDodge" xml:space="preserve">
-    <value>Show dodge</value>
-  </data>
-  <data name="ShowFilters" xml:space="preserve">
-    <value>Show filters</value>
-  </data>
-  <data name="ShowImmune" xml:space="preserve">
-    <value>Show immune</value>
-  </data>
-  <data name="ShowMiss" xml:space="preserve">
-    <value>Show miss</value>
-  </data>
-  <data name="ShowMoreInform" xml:space="preserve">
-    <value>Show more informations</value>
-  </data>
-  <data name="ShowParry" xml:space="preserve">
-    <value>Show parry</value>
-  </data>
-  <data name="ShowResist" xml:space="preserve">
-    <value>Show resist</value>
-  </data>
-  <data name="Source" xml:space="preserve">
-    <value>Source</value>
+  <data name="Spell" xml:space="preserve">
+    <value>Spell</value>
   </data>
   <data name="Status" xml:space="preserve">
     <value>Status</value>
@@ -238,9 +211,15 @@
     <value>Analyzing of damage taken</value>
   </data>
   <data name="Total" xml:space="preserve">
-    <value>Total:</value>
+    <value>Total</value>
   </data>
   <data name="TypeOf" xml:space="preserve">
     <value>Type</value>
+  </data>
+  <data name="Value" xml:space="preserve">
+    <value>Value</value>
+  </data>
+  <data name="Creator" xml:space="preserve">
+    <value>Creator</value>
   </data>
 </root>
