--- a/src/CombatAnalysis.App/Localizations/Resources/Settings/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/Settings/Resource.resx
@@ -120,6 +120,9 @@
   <data name="ChangeLocationPath" xml:space="preserve">
     <value>Change</value>
   </data>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
   </data>
