--- a/src/CombatAnalysis.App/Localizations/Resources/Settings/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/Settings/Resource.ru.resx
@@ -120,6 +120,9 @@
   <data name="ChangeLocationPath" xml:space="preserve">
     <value>Изменить</value>
   </data>
+  <data name="Close" xml:space="preserve">
+    <value>Закрыть</value>
+  </data>
   <data name="Language" xml:space="preserve">
     <value>Язык</value>
   </data>
