--- a/src/CombatAnalysis.App/Localizations/Resources/AuthUser/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/AuthUser/Resource.resx
@@ -117,25 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Back" xml:space="preserve">
-    <value>Назад</value>
+  <data name="Authorization" xml:space="preserve">
+    <value>Authorization...</value>
   </data>
-  <data name="Email" xml:space="preserve">
-    <value>Email</value>
+  <data name="AuthorizationFailed" xml:space="preserve">
+    <value>Authorization failed. Please, Login one more time</value>
   </data>
-  <data name="IncorrectData" xml:space="preserve">
-    <value>Вы указали не верно логин/пароль</value>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="ContinueAuthInBrowser" xml:space="preserve">
+    <value>Continue Authorization in your Browser</value>
+  </data>
+  <data name="ContinueRegInBrowser" xml:space="preserve">
+    <value>Continue Registration in your Browser</value>
   </data>
   <data name="Login" xml:space="preserve">
-    <value>Войти</value>
+    <value>Login</value>
   </data>
-  <data name="LoginFailed" xml:space="preserve">
-    <value>Не удалось получить ответ от сервера. Возможно проблемы с подключением или сервер временно не доступен</value>
-  </data>
-  <data name="Password" xml:space="preserve">
-    <value>Пароль</value>
-  </data>
-  <data name="Title" xml:space="preserve">
-    <value>Авторизация</value>
+  <data name="Verification" xml:space="preserve">
+    <value>Verification...</value>
   </data>
 </root>
