Add Combat aura pin
Add Combat aura pin that allow pin some Aura (buff/debuff) and see what the Auras used during this pinned auras (like if pin Hero you can see what the Auras applied during Hero active)

--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.resx
@@ -204,8 +204,8 @@
   <data name="TypeOfLogs" xml:space="preserve">
     <value>Type of logs</value>
   </data>
-  <data name="ToUploadShouldBeLogin" xml:space="preserve">
-    <value>To Upload logs you should be Login</value>
+  <data name="ToSaveYouShouldBeLogin" xml:space="preserve">
+    <value>To Save logs you should be Login</value>
   </data>
   <data name="Upload" xml:space="preserve">
     <value>Upload</value>
