--- a/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/CombatLogInformation/Resource.ru.resx
@@ -204,8 +204,8 @@
   <data name="TypeOfLogs" xml:space="preserve">
     <value>Тип логов</value>
   </data>
-  <data name="ToUploadShouldBeLogin" xml:space="preserve">
-    <value>Для Загрузки логов вы должны быть авторизованы</value>
+  <data name="ToSaveYouShouldBeLogin" xml:space="preserve">
+    <value>Для Сохранения логов вы должны быть авторизованы</value>
   </data>
   <data name="Upload" xml:space="preserve">
     <value>Загрузить</value>
